--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.4",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.292.0"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.8.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.0",
@@ -35,8 +40,6 @@
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vite-plugin-pwa": "^0.17.4",
-    "vitest": "^0.34.6",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.4"
+    "vitest": "^0.34.6"
   }
-} 
+}
