--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.1",
-    "react-hook-form": "^7.48.2",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.2"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
