--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-dist/
-build/
+# Next.js build output
+.next/
+out/
 
 # Environment variables
 .env
@@ -32,18 +32,7 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
+# Coverage directory
 coverage/
-
-# Temporary files
-*.tmp
-*.temp
