--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:export",
   "outputDirectory": "dist",
-  "framework": "vite",
+  "framework": "nextjs",
   "rewrites": [
     {
       "source": "/(.*)",
