--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run copy-dist",
     "build:export": "next build && npm run copy-dist",
-    "copy-dist": "if exist dist rmdir /s /q dist && xcopy out dist /e /i /h /y",
+    "copy-dist": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});fs.cpSync('out','dist',{recursive:true});console.log('dist folder created successfully');\"",
     "start": "next start",
     "lint": "next lint"
   },
