--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ compatibility_date = "2024-01-01"
 
 [build]
 command = "npm run build"
-output_dir = "dist"
+pages_build_output_dir = "dist"
 
 [build.upload]
 format = "directory"
