--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npm run copy-dist",
-    "build:export": "next build && npm run copy-dist",
-    "copy-dist": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});fs.cpSync('out','dist',{recursive:true});console.log('dist folder created successfully');\"",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
