--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run prepare-pages",
     "build:pages": "next build && npm run prepare-pages",
     "prepare-pages": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('dist'))fs.rmSync('dist',{recursive:true});fs.cpSync('.next','dist',{recursive:true});console.log('dist folder created for Cloudflare Pages');\"",
     "start": "next start",
