--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: dist
-        path: dist/
+        name: out
+        path: out/
         retention-days: 1
 
   deploy:
@@ -41,8 +41,8 @@ jobs:
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
-        name: dist
-        path: dist/
+        name: out
+        path: out/
     
     - name: Deploy to Cloudflare Pages
       uses: cloudflare/pages-action@v1
@@ -50,5 +50,5 @@ jobs:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
         projectName: calculator
-        directory: dist/
+        directory: out/
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
