--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,23 @@
 [build]
   command = "npm run build"
-  publish = "dist"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
 
+# Обработка API запросов
 [[redirects]]
   from = "/api/*"
-  to = "/api/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
 
+# SPA роуты
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
+# Заголовки безопасности
 [[headers]]
   for = "/*"
   [headers.values]
