--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,5 @@
-[build]
-command = "npm run build"
-output_dir = "out"
-
 # Конфигурация для Cloudflare Pages
-[pages_build_output_dir]
-output_dir = "out"
+pages_build_output_dir = "out"
 
 [env.production]
 name = "calculator"
@@ -14,7 +9,3 @@ name = "calculator-preview"
 
 [env.development]
 name = "calculator-dev"
-
-# Поддержка функций
-[functions]
-directory = "functions"
