--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "clean": "rm -rf .next out dist",
     "type-check": "tsc --noEmit",
-    "deploy": "npm run build && npx wrangler pages deploy .next --project-name calculator"
+    "deploy": "npm run build && npx wrangler pages deploy out --project-name calculator",
+    "deploy:preview": "npm run build && npx wrangler pages deploy out --project-name calculator --branch preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -27,9 +28,10 @@
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.0.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "eslint-config-next": "^15.5.2",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.2",
+    "wrangler": "^3.101.0"
   }
 }
