--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf .next out dist",
+    "clean": "rimraf .next out",
+    "clean:full": "node scripts/clean-build.js",
+    "prebuild": "npm run clean",
+    "build:clean": "npm run clean && next build",
+    "build:full": "npm run clean:full && next build",
     "type-check": "tsc --noEmit",
-    "deploy": "npm run build && npx wrangler pages deploy .next --project-name calculator"
+    "deploy": "npm run build:full && npx wrangler pages deploy .next --project-name calculator"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -29,6 +33,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.31",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
