--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,16 +6,21 @@
   "display": "standalone",
   "background_color": "#1f2937",
   "theme_color": "#3b82f6",
+  "version": "2.0.0",
+  "scope": "/",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/favicon.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/favicon.svg",
       "sizes": "any",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ]
 }
