--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,15 +7,15 @@ pages_build_output_dir = ".next/standalone"
 # Исключаем большие файлы из деплоя
 [env.production]
 name = "calculator"
-vars = { 
-  ENVIRONMENT = "production",
-  SLACK_WEBHOOK_URL = "https://hooks.slack.com/services/T09CEV66EPN/B09CFBXDUGL/ACRW8p7RmKKalRIJrOti2"
-}
+[env.production.vars]
+ENVIRONMENT = "production"
+SLACK_WEBHOOK_URL = "https://hooks.slack.com/services/T09CEV66EPN/B09CFBXDUGL/ACRW8p7RmKKalRIJrOti2"
 
 # Переменные окружения для превью
 [env.preview]
 name = "calculator-preview"
-vars = { ENVIRONMENT = "preview" }
+[env.preview.vars]
+ENVIRONMENT = "preview"
 
 # Глобальные переменные окружения
 [vars]
