--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "clean": "powershell -Command \"Remove-Item -Recurse -Force .next, out, dist -ErrorAction SilentlyContinue\"",
     "clean-cache": "powershell -Command \"Remove-Item -Recurse -Force .next, out, dist, .cache, cache, webpack -ErrorAction SilentlyContinue\"",
     "type-check": "tsc --noEmit",
-    "deploy": "npm run clean-cache && npm run build && npx wrangler pages deploy .next/standalone --project-name calculator"
+    "deploy": "npm run clean-cache && npm run build && npx wrangler pages deploy .next/standalone --project-name calculator",
+    "stagewise": "stagewise",
+    "stagewise:analyze": "stagewise analyze",
+    "stagewise:generate": "stagewise generate",
+    "stagewise:refactor": "stagewise refactor"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -20,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "stagewise": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
