--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "react-player": "^3.3.2",
     "stagewise": "^0.8.0",
     "zod": "^3.22.4"
   },
