--- a/package.json
+++ b/package.json
@@ -18,24 +18,26 @@
     "stagewise:refactor": "stagewise refactor"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "framer-motion": "^10.16.4",
+    "@hookform/resolvers": "^3.10.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.292.0",
     "next": "^15.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.62.0",
     "react-player": "^3.3.2",
-    "stagewise": "^0.8.0",
-    "zod": "^3.22.4"
+    "stagewise": "^0.8.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.5.2",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^15.5.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
