--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ name = "calculator"
 # Specify build output directory for Pages (static export)
 pages_build_output_dir = "out"
 
-# Exclude large files from deployment
+# Environment variables for production
 [env.production]
 name = "calculator"
 [env.production.vars]
@@ -20,9 +20,6 @@ ENVIRONMENT = "preview"
 [vars]
 ENVIRONMENT = "development"
 
-# Pages configuration
-[pages]
-# Enable function support
-functions_dir = "functions"
-# Enable static assets
-assets_dir = "out"
+# Compatibility settings
+compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
