--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.62.0",
     "react-player": "^3.3.2",
     "react-simple-maps": "^3.0.0",
+    "recharts": "^3.1.2",
     "stagewise": "^0.8.2",
     "zod": "^3.25.76"
   },
